--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,17 +39,17 @@
           </picture>
         </a>
         <button
-          class="page-header__toggle"
+          class="page-header__toggle page-header__toggle--no-js"
           type="button"
           aria-label="Кнопка открыть и закрыть меню"
         >
           <span class="page-header__toggle-icone-open">
-            <svg width="19.958px" height="14px" aria-hidden="true">
+            <svg width="20" height="14" aria-hidden="true">
               <use xlink:href="#icon-menu-open"></use>
             </svg>
           </span>
           <span class="page-header__toggle-icone-close">
-            <svg width="20.514px" height="20.512px" aria-hidden="true">
+            <svg width="20" height="20" aria-hidden="true">
               <use xlink:href="#icon-menu-close"></use>
             </svg>
           </span>
@@ -88,8 +88,8 @@
               >
                 <svg
                   class="main-nav__help-item-link-search-icon"
-                  width="17.6px"
-                  height="17.6px"
+                  width="17"
+                  height="17"
                   role="img"
                 >
                   <use xlink:href="#icon-search"></use>
@@ -101,8 +101,8 @@
               <a class="main-nav__help-item-link" href="#">
                 <svg
                   class="main-nav__help-item-link-card-icon"
-                  width="20.294px"
-                  height="18.849px"
+                  width="20"
+                  height="19"
                   role="img"
                 >
                   <use xlink:href="#icon-cart"></use>
@@ -124,7 +124,7 @@
         <div class="container">
           <h1 class="catalog-header__title">Каталог товаров</h1>
         </div>
-        <svg class="catalog-header-img" width="1150px" height="34px">
+        <svg class="catalog-header-img" width="1150" height="34">
           <use xlink:href="#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
@@ -200,8 +200,8 @@
                   aria-label="Добавить товар в корзину"
                   ><svg
                     class="catalog__product-tobasket-img"
-                    width="20.294px"
-                    height="18.849px"
+                    width="20"
+                    height="19"
                     role="img"
                   >
                     <use xlink:href="#icon-cart"></use>
@@ -278,8 +278,8 @@
                   aria-label="Добавить товар в корзину"
                   ><svg
                     class="catalog__product-tobasket-img"
-                    width="20.294px"
-                    height="18.849px"
+                    width="20"
+                    height="19"
                     role="img"
                   >
                     <use xlink:href="#icon-cart"></use>
@@ -359,8 +359,8 @@
                   aria-label="Добавить товар в корзину"
                   ><svg
                     class="catalog__product-tobasket-img"
-                    width="20.294px"
-                    height="18.849px"
+                    width="20"
+                    height="19"
                     role="img"
                   >
                     <use xlink:href="#icon-cart"></use>
@@ -419,8 +419,8 @@
           >
             <svg
               class="production__video-button-img"
-              width="100.678px"
-              height="76.891px"
+              width="101"
+              height="77"
               aria-hidden="true"
             >
               <use xlink:href="#icon-play"></use>
@@ -446,47 +446,27 @@
           aria-label="Лого Мишка переход на главную страницу"
           href="index.html"
         >
-          <svg
-            class="page-footer__logo-img"
-            width="101.615px"
-            height="34.056px"
-            role="img"
-          >
+          <svg class="page-footer__logo-img" width="102" height="34" role="img">
             <use xlink:href="#icon-logo-footer"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Мы в Instagram">
-              <svg
-                class="social__link-img"
-                width="21.769px"
-                height="21.334px"
-                role="img"
-              >
+              <svg class="social__link-img" width="22" height="22" role="img">
                 <use xlink:href="#icon-insta"></use></svg
             ></a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Мы в Facebook"
-              ><svg
-                class="social__link-img"
-                width="14.962px"
-                height="27.718px"
-                role="img"
-              >
+              ><svg class="social__link-img" width="15" height="28" role="img">
                 <use xlink:href="#icon-fb"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Мы в Twitter"
-              ><svg
-                class="social__link-img"
-                width="23.494px"
-                height="20.168px"
-                role="img"
-              >
+              ><svg class="social__link-img" width="23" height="20" role="img">
                 <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
@@ -498,12 +478,7 @@
             class="copyright__link"
             href="https://htmlacademy.ru/intensive/adaptive"
             aria-label="Сайт htmlacademy.ru"
-            ><svg
-              class="copyright__link-img"
-              width="26.943px"
-              height="34.09px"
-              role="img"
-            >
+            ><svg class="copyright__link-img" width="27" height="34" role="img">
               <use xlink:href="#icon-logo-htmlacademy"></use>
             </svg>
           </a>
