--- a/source/index.html
+++ b/source/index.html
@@ -35,17 +35,17 @@
           </picture>
         </a>
         <button
-          class="page-header__toggle"
+          class="page-header__toggle page-header__toggle--no-js"
           type="button"
           aria-label="Кнопка открыть и закрыть меню"
         >
           <span class="page-header__toggle-icone-open">
-            <svg width="19.958px" height="14px" aria-hidden="true">
+            <svg width="20" height="14" aria-hidden="true">
               <use xlink:href="#icon-menu-open"></use>
             </svg>
           </span>
           <span class="page-header__toggle-icone-close">
-            <svg width="20.514px" height="20.512px" aria-hidden="true">
+            <svg width="20" height="20" aria-hidden="true">
               <use xlink:href="#icon-menu-close"></use>
             </svg>
           </span>
@@ -83,8 +83,8 @@
                 href="#"
                 ><svg
                   class="main-nav__help-item-link-search-icon"
-                  width="17.6px"
-                  height="17.6px"
+                  width="18"
+                  height="18"
                   role="img"
                 >
                   <use xlink:href="#icon-search"></use>
@@ -96,8 +96,8 @@
               <a class="main-nav__help-item-link" href="#"
                 ><svg
                   class="main-nav__help-item-link-card-icon"
-                  width="20.294px"
-                  height="18.849px"
+                  width="20"
+                  height="19"
                   role="img"
                 >
                   <use xlink:href="#icon-cart"></use>
@@ -131,8 +131,8 @@
                 ><span>Предметы интерьера</span
                 ><svg
                   class="product__list-link-interior"
-                  width="40.219px"
-                  height="62.411px"
+                  width="40"
+                  height="62"
                   role="img"
                 >
                   <use xlink:href="#icon-interior"></use>
@@ -146,8 +146,8 @@
                 ><span>Детские игрушки</span>
                 <svg
                   class="product__list-link-toy"
-                  width="60px"
-                  height="59.62px"
+                  width="60"
+                  height="60"
                   role="img"
                 >
                   <use xlink:href="#icon-toy"></use>
@@ -158,8 +158,8 @@
         </div>
         <svg
           class="product__bottom-img"
-          width="1150px"
-          height="34px"
+          width="1150"
+          height="34"
           aria-hidden="true"
         >
           <use xlink:href="#icon-bg-zigzag-fill"></use>
@@ -199,70 +199,76 @@
         </button>
       </section>
       <section class="about">
-        <svg class="about__top-img" width="1150px" height="23px">
+        <svg class="about__top-img" width="1150" height="23">
           <use xlink:href="#icon-bg-zigzag-line"></use>
         </svg>
         <div class="about__inner container">
           <h2 class="about__heading">Коротко о нас:</h2>
           <ul class="about__list">
             <li class="about__item">
-              <img
+              <svg
                 class="about__item-flower"
-                src="img/icon-feature-flower.svg"
-                width="31.972px"
-                height="37.301px"
-                alt="Иконка экологически чистые материалы"
-              />
+                width="32"
+                height="37"
+                aria-hidden="true"
+              >
+                <use xlink:href="#icon-feature-flower"></use>
+              </svg>
               Экологически чистые материалы
             </li>
             <li class="about__item">
-              <img
+              <svg
                 class="about__item-money"
-                src="img/icon-feature-money.svg"
-                width="46.575px"
-                height="27.332px"
-                alt="Иконка Скандинавский стиль"
-              />
+                width="47"
+                height="27"
+                aria-hidden="true"
+              >
+                <use xlink:href="#icon-feature-money"></use>
+              </svg>
               Скандинавский стиль по российской цене
             </li>
             <li class="about__item">
-              <img
+              <svg
                 class="about__item-heart"
-                src="img/icon-feature-heart.svg"
-                width="33.05px"
-                height="27px"
-                alt="Иконка лайки"
-              />
+                width="33"
+                height="27"
+                aria-hidden="true"
+              >
+                <use xlink:href="#icon-feature-heart"></use>
+              </svg>
               Увеличивает лайки на фотографиях
             </li>
             <li class="about__item">
-              <img
+              <svg
                 class="about__item-ball"
-                src="img/icon-feature-ball.svg"
-                width="34.373px"
-                height="34.373px"
-                alt="Иконка Связано вручную"
-              />
+                width="34"
+                height="34"
+                aria-hidden="true"
+              >
+                <use xlink:href="#icon-feature-ball"></use>
+              </svg>
               Связано вручную с любовью и умилением
             </li>
             <li class="about__item">
-              <img
+              <svg
                 class="about__item-rocket"
-                src="img/icon-feature-rocket.svg"
-                width="54.156px"
-                height="23.183px"
-                alt="Иконка Поддержка отечественного производителя"
-              />
+                width="54"
+                height="23"
+                aria-hidden="true"
+              >
+                <use xlink:href="#icon-feature-rocket"></use>
+              </svg>
               Поддержка отечественного производителя
             </li>
             <li class="about__item">
-              <img
+              <svg
                 class="about__item-gift"
-                src="img/icon-feature-gift.svg"
-                width="32.666px"
-                height="32.486px"
-                alt="Иконка подарка"
-              />
+                width="33"
+                height="32"
+                aria-hidden="true"
+              >
+                <use xlink:href="#icon-feature-gift"></use>
+              </svg>
               Поставляется в подарочной упаковке
             </li>
           </ul>
@@ -282,7 +288,7 @@
               </p>
               <div class="reviews__author-info">
                 <p class="reviews__author-name">Анастасия Красильникова</p>
-                <p class="reviews__author-nickname">@misssssiskras</p>
+                <a class="reviews__author-nickname" href="#">@misssssiskras</a>
               </div>
             </blockquote>
             <blockquote class="reviews__item slider__item">
@@ -291,7 +297,7 @@
               </p>
               <div class="reviews__author-info">
                 <p class="reviews__author-name">Павел Томилин</p>
-                <p class="reviews__author-nickname">@paveltomilin</p>
+                <a class="reviews__author-nickname" href="#">@paveltomilin</a>
               </div>
             </blockquote>
             <blockquote class="reviews__item slider__item">
@@ -301,7 +307,7 @@
               </p>
               <div class="reviews__author-info">
                 <p class="reviews__author-name">Анастасия Красильникова</p>
-                <p class="reviews__author-nickname">@misssssiskras</p>
+                <a class="reviews__author-nickname" href="#">@misssssiskras</a>
               </div>
             </blockquote>
             <div class="reviews__list-buttons">
@@ -310,7 +316,7 @@
                 type="button"
                 aria-label="Предыдущий отзыв"
               >
-                <svg width="50px" height="26.003px" aria-hidden="true">
+                <svg width="50" height="26" aria-hidden="true">
                   <use xlink:href="#icon-left-arrow"></use>
                 </svg>
               </button>
@@ -319,7 +325,7 @@
                 type="button"
                 aria-label="Следующий отзыв"
               >
-                <svg width="50px" height="26.003px" aria-hidden="true">
+                <svg width="50" height="26" aria-hidden="true">
                   <use xlink:href="#icon-right-arrow"></use>
                 </svg>
               </button>
@@ -331,8 +337,8 @@
       <section class="contacts">
         <svg
           class="contacts__top-img"
-          width="1150px"
-          height="23px"
+          width="1150"
+          height="23"
           aria-hidden="true"
         >
           <use xlink:href="#icon-bg-zigzag-line"></use>
@@ -341,8 +347,8 @@
           <img
             class="contacts__icon-flag"
             src="img/icon-flag.svg"
-            width="46.68px"
-            height="81.691px"
+            width="47"
+            height="82"
             alt="Иконка флага"
           />
           <h2 class="contacts__title">Контакты</h2>
@@ -364,10 +370,7 @@
           </div>
 
           <div class="contacts__map">
-            <iframe
-              src="https://yandex.ru/map-widget/v1/-/CCQp4-W0XD"
-              allowfullscreen="true"
-            ></iframe>
+            <iframe src="https://yandex.ru/map-widget/v1/-/CCQp4-W0XD"></iframe>
           </div>
 
           <div class="contacts__write">
@@ -383,8 +386,8 @@
           aria-label="Лого Мишка"
           ><svg
             class="page-footer__logo-img"
-            width="101.615px"
-            height="34.056px"
+            width="101"
+            height="34"
             role="img"
           >
             <use xlink:href="#icon-logo-footer"></use>
@@ -393,35 +396,20 @@
         <ul class="page-footer__social social">
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Мы в Instagram">
-              <svg
-                class="social__link-img"
-                width="21.769px"
-                height="21.334px"
-                role="img"
-              >
+              <svg class="social__link-img" width="22" height="21" role="img">
                 <use xlink:href="#icon-insta"></use></svg
             ></a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Мы в Facebook"
-              ><svg
-                class="social__link-img"
-                width="14.962px"
-                height="27.718px"
-                role="img"
-              >
+              ><svg class="social__link-img" width="15" height="28" role="img">
                 <use xlink:href="#icon-fb"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a href="#" class="social__link" aria-label="Мы в Twitter"
-              ><svg
-                class="social__link-img"
-                width="23.494px"
-                height="20.168px"
-                role="img"
-              >
+              ><svg class="social__link-img" width="23" height="20" role="img">
                 <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
@@ -433,12 +421,7 @@
             class="copyright__link"
             href="https://htmlacademy.ru/intensive/adaptive"
             aria-label="Сайт htmlacademy.ru"
-            ><svg
-              class="copyright__link-img"
-              width="26.943px"
-              height="34.09px"
-              role="img"
-            >
+            ><svg class="copyright__link-img" width="27" height="34" role="img">
               <use xlink:href="#icon-logo-htmlacademy"></use>
             </svg>
           </a>
