Исправил все недочеты

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -343,8 +343,7 @@
               <div class="catalog__product-middle">
                 <a href="#" class="catalog__product-middle-link">
                   <h3 class="catalog__product-name">
-                    Большая корзинка <br />
-                    для игрушек
+                    Большая корзинка для игрушек
                   </h3>
                 </a>
                 <p class="catalog__product-description">
