--- a/source/form.html
+++ b/source/form.html
@@ -123,7 +123,7 @@
         <div class="container">
           <h1 class="form-header__title">Вязание на заказ</h1>
         </div>
-        <svg class="form-header-img" width="1150" height="34">
+        <svg class="form-header__img" width="1150" height="34">
           <use xlink:href="#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
