--- a/source/index.html
+++ b/source/index.html
@@ -120,7 +120,7 @@
         <h2 class="visually-hidden">Товары магазина</h2>
         <div class="product__inner container container--no-mobile-padding">
           <p class="product__slogan">
-            Милые штуки ручной работы для дома
+            Милые штуки ручной работы&nbsp;для дома
           </p>
 
           <ul class="product__list">
@@ -188,15 +188,59 @@
             <span class="product-week__specification-description">15 см</span>
           </div>
         </div>
-        <div class="product-week__picture"></div>
+        <picture class="product-week__inner">
+          <source
+            type="image/webp"
+            media="(min-width: 1150px)"
+            srcset="
+              img/triple-set-desktop@1x.webp 1x,
+              img/triple-set-desktop@2x.webp 2x
+            "
+          />
+          <source
+            type="image/webp"
+            media="(min-width: 768px)"
+            srcset="
+              img/triple-set-tablet@1x.webp 1x,
+              img/triple-set-tablet@2x.webp 2x
+            "
+          />
+          <source
+            type="image/webp"
+            srcset="
+              img/triple-set-desktop@1x.webp 1x,
+              img/triple-set-desktop@2x.webp 2x
+            "
+          />
+          <source
+            media="(min-width: 1150px)"
+            srcset="
+              img/triple-set-desktop@1x.jpg 1x,
+              img/triple-set-desktop@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              img/triple-set-tablet@1x.jpg 1x,
+              img/triple-set-tablet@2x.jpg 2x
+            "
+          />
+          <img
+            class="product-week__picture"
+            src="img/triple-set-mobile@1x.jpg"
+            srcset="img/triple-set-mobile@2x.jpg 2x"
+            alt="Фото Вязаные корзинки"
+          />
+        </picture>
         <span class="product-week__price">Цена: 990 руб.</span>
-        <button
-          type="button"
+        <a
           class="button product-week__button"
+          type="button"
           data-modal="modal_1"
         >
           Заказать
-        </button>
+        </a>
       </section>
       <section class="about">
         <svg class="about__top-img" width="1150" height="23">
@@ -207,75 +251,76 @@
           <ul class="about__list">
             <li class="about__item">
               <svg
-                class="about__item-flower"
+                class="about__item-icon about__item-icon--eco"
                 width="32"
                 height="37"
                 aria-hidden="true"
               >
                 <use xlink:href="#icon-feature-flower"></use>
               </svg>
-              Экологически чистые материалы
+              <span>Экологически чистые&nbsp;материалы</span>
             </li>
             <li class="about__item">
               <svg
-                class="about__item-money"
+                class="about__item-icon about__item-icon--style"
                 width="47"
                 height="27"
                 aria-hidden="true"
               >
                 <use xlink:href="#icon-feature-money"></use>
               </svg>
-              Скандинавский стиль по российской цене
+              <span>Скандинавский стиль по&nbsp;российской цене</span>
             </li>
             <li class="about__item">
               <svg
-                class="about__item-heart"
+                class="about__item-icon about__item-icon--likes"
                 width="33"
                 height="27"
                 aria-hidden="true"
               >
                 <use xlink:href="#icon-feature-heart"></use>
               </svg>
-              Увеличивает лайки на фотографиях
+              <span>Увеличивает лайки на&nbsp;фотографиях</span>
             </li>
             <li class="about__item">
               <svg
-                class="about__item-ball"
+                class="about__item-icon about__item-icon--handmade"
                 width="34"
                 height="34"
                 aria-hidden="true"
               >
                 <use xlink:href="#icon-feature-ball"></use>
               </svg>
-              Связано вручную с любовью и умилением
+              <span>Связано вручную с любовью&nbsp;и&nbsp;умилением</span>
             </li>
             <li class="about__item">
               <svg
-                class="about__item-rocket"
+                class="about__item-icon about__item-icon--support"
                 width="54"
                 height="23"
                 aria-hidden="true"
               >
                 <use xlink:href="#icon-feature-rocket"></use>
               </svg>
-              Поддержка отечественного производителя
+              <span>Поддержка отечественного производителя</span>
             </li>
             <li class="about__item">
               <svg
-                class="about__item-gift"
+                class="about__item-icon about__item-icon--gift"
                 width="33"
                 height="32"
                 aria-hidden="true"
               >
                 <use xlink:href="#icon-feature-gift"></use>
               </svg>
-              Поставляется в подарочной упаковке
+              <span>Поставляется в подарочной&nbsp;упаковке</span>
             </li>
           </ul>
         </div>
       </section>
       <section class="reviews container">
         <div class="reviews__inner slider">
+          <div class="reviews__img"></div>
           <h2 class="reviews__title">Отзывы</h2>
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item slider__item--active">
