--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body class="page-body">
-    <div style="display: none;">
+    <div style="display: none">
       <include src="build/img/sprite.svg"></include>
     </div>
     <header class="page-header container">
@@ -119,16 +119,16 @@
       <section class="product">
         <h2 class="visually-hidden">Товары магазина</h2>
         <div class="product__inner container container--no-mobile-padding">
-          <p class="product__slogan">
-            Милые штуки ручной работы&nbsp;для дома
-          </p>
+          <p class="product__slogan">Милые штуки ручной работы&nbsp;для дома</p>
 
           <ul class="product__list">
             <li class="product__list-item product__list-item--left-btn">
               <a
                 class="product__list-link product__list-link--left-hover"
                 href="catalog.html"
-                ><span>Предметы интерьера</span
+                ><span
+                  >Предметы <br />
+                  интерьера</span
                 ><svg
                   class="product__list-link-interior"
                   width="40"
@@ -143,7 +143,10 @@
               <a
                 class="product__list-link product__list-link--right-hover"
                 href="catalog.html"
-                ><span>Детские игрушки</span>
+                ><span
+                  >Детские <br />
+                  игрушки</span
+                >
                 <svg
                   class="product__list-link-toy"
                   width="60"
@@ -337,9 +340,7 @@
               </div>
             </blockquote>
             <blockquote class="reviews__item slider__item">
-              <p class="reviews__text">
-                Всем привет! И хорошего дня ;)
-              </p>
+              <p class="reviews__text">Всем привет! И хорошего дня ;)</p>
               <div class="reviews__author-info">
                 <p class="reviews__author-name">Павел Томилин</p>
                 <a class="reviews__author-nickname" href="#">@paveltomilin</a>
